--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -1,18 +1,3 @@
-.BackgroundImage {
-    height: 100% !important;
-  
-    background: {
-        size: cover;
-        position: center;
-    }
+.svgWave {
+    stroke: #2980b9
 }
-
-.Wrapper > div:last-child:not(.BackgroundImage) {
-    z-index: 0;
-    animation: loading 1.25s infinite;
-    pointer-events: none;
-  
-    &::before {
-      content: none;
-    }
-  }
