--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,3 +16,26 @@
 ::-webkit-scrollbar-thumb:hover {
   background: #666;
 }
+
+option {
+  cursor: pointer;
+}
+
+option:hover {
+  background: '#f4f4f4';
+  padding: '4px 5px'
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+input[type=number] {
+  text-align: right;
+}
