--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -244,10 +244,9 @@
     font-weight: 500;
   }
 
-  .content-title-1,
-  .content-title-2 {
+  .content-title-1 {
     font-weight: 600;
-    font-size: 20px;
+    font-size: 16px;
     font-family: "Oswald", sans-serif;
   }
 
@@ -291,8 +290,7 @@
       font-size: 72px;
       font-family: "Oswald", sans-serif;
     }
-    .title-box-1,
-    .title-box-2 {
+    .title-box-1 {
       margin-top: 2px;
       height: 100px;
       overflow: hidden;
@@ -300,7 +298,6 @@
     }
     > .desc {
       margin-top: 16px;
-      width: 500px;
     }
     > .cta {
       width: 500px;
@@ -403,12 +400,85 @@
   }
 
 
-  .cover{
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100vw;
-    height: 100vh;
-    background-color: transparent;
-    z-index: 100;
+.cover{
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: transparent;
+  z-index: 100;
+}
+
+.trailer-button {
+    $btn-color: #9f1239;
+    $btn-color-dark: shade($btn-color, 40%);
+    color: tint($btn-color);
+    span {
+      border-radius: 50%;
+      background-color: $btn-color-dark;
+      transition: width 0.4s ease-in-out, height 0.4s ease-in-out;
+      transform: translate(-50%, -50%);
+      z-index: -1;
+    }
+    
+    &:hover {
+      color: tint($btn-color, 75%);
+    }
+    
+    &:active {
+      background-color: $btn-color;
+    }
+}
+
+.scroller {
+  max-width: 100%;
+}
+
+.scroller__inner {
+  padding-block: 1rem;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 5rem;
+}
+
+.scroller[data-animated="true"] {
+  overflow: hidden;
+  -webkit-mask: linear-gradient(
+    90deg,
+    transparent,
+    white 20%,
+    white 80%,
+    transparent
+  );
+  mask: linear-gradient(90deg, transparent, white 20%, white 80%, transparent);
+}
+
+.scroller[data-animated="true"] .scroller__inner {
+  width: max-content;
+  flex-wrap: nowrap;
+  animation: scroll var(--_animation-duration, 40s)
+    var(--_animation-direction, forwards) linear infinite;
+}
+
+.scroller[data-direction="right"] {
+  --_animation-direction: reverse;
+}
+
+.scroller[data-direction="left"] {
+  --_animation-direction: forwards;
+}
+
+.scroller[data-speed="fast"] {
+  --_animation-duration: 20s;
+}
+
+.scroller[data-speed="slow"] {
+  --_animation-duration: 100s;
+}
+
+@keyframes scroll {
+  to {
+    transform: translate(calc(-50% - 0.5rem));
   }
+}
